# BASIS

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  AUTHORS.txt  BashUtilities.dox  BasisConfigSettings.cmake  BasisPack.cmake  BasisProject.cmake  BasisSettings.cmake  BasisSuperBuild.cmake  BasisTest.cmake  BasisTools.cmake  BasisUpdate.cmake  CMakeLists.txt  COPYING  COPYING.txt  CTestConfig.cmake  CTestCustom.cmake.in  ChangeLog.txt  CheckPublicHeaders.cmake  CommonTools.cmake  CompareFiles.cmake  Config.cmake.in  ConfigSettings.cmake  ConfigUse.cmake.in  ConfigVersion.cmake.in  ConfigureIncludeFiles.cmake  CxxUtilities.dox  Directories.cmake.in  DirectoriesSettings.cmake  DocTools.cmake  Doxyfile.in  ExecuteProcess.cmake  ExportTools.cmake  ExternalData.cmake  FindAFNI.cmake  FindARPACK.cmake  FindBASH.cmake  FindBASIS.cmake  (+75 more)
ALL/: CMakeLists.txt
Template/example/: CMakeLists.txt  README
Template/software/: CMakeLists.txt  CTestConfig.cmake  README
Template/testing/: CMakeLists.txt  CTestConfig.cmake
data/: CMakeLists.txt  README.txt
data/template/: AUTHORS.txt  BasisProject.cmake  CMakeLists.txt  COPYING  COPYING.txt  CTestConfig.cmake  INSTALL  INSTALL.txt  LICENSE  README  README.txt
data/template-1.0/: BasisProject.cmake  CMakeLists.txt  CTestConfig.cmake  INSTALL.txt  README.txt  _config.py
data/template-1.1/: CMakeLists.txt  INSTALL.txt
data/template-1.3/: AUTHORS.txt  BasisProject.cmake  CTestConfig.cmake  INSTALL.txt  README.txt
data/template-1.4/: BasisProject.cmake  INSTALL.txt
data/template-1.5/: BasisProject.cmake  CMakeLists.txt  INSTALL.txt  README.txt  _config.py
data/template-1.6/: COPYING.txt  _config.py
data/template-1.8/: BasisProject.cmake  _config.py  config.py
data/templates/: CMakeLists.txt  README.md
etc/: CMakeLists.txt
etc/template/: CMakeLists.txt
example/: CMakeLists.bak.txt  CMakeLists.txt  README  demoBASIS.sh  hellobasis.cxx  quickstart.sh
example/HelloBasis/: FooBar.pm.in  bar.cxx  bar.h  foo.h  foobar.py  foobar.sh.in  hellobash.sh  hellomatlab.m  helloperl.pl  hellopython.py
example/doxygen/: DoxygenExample.cmake
example/hellobasis/: FooBar.pm.in  bar.cxx  bar.h  foo.cxx  foo.h  foobar.py  foobar.sh.in  hellobash.sh  helloc++.cxx  hellomatlab.m  helloperl.pl  hellopython.py  moda.cxx  moda.h  userprog.cpp  userprog.cxx
include/: CMakeLists.txt  CmdArgs.h  CmdLine.h  MultiArg.h  assert.h  except.h  exceptions.h  path.h  subprocess.h  test.h  testdriver-after-test.inc  testdriver-before-test.inc  testdriver-itk.hxx  testdriver-itk4.hxx  testdriver.h  testdriver.hxx
include/basis/: CmdArgs.h  CmdLine.h  MultiArg.h  ValueArg.h  assert.h  config.h.in  except.h  os.h  stdio.h  subprocess.h  test.h  testdriver-after-test.inc  testdriver-before-test.inc  testdriver-itk.hxx  testdriver.h  testdriver.hxx  utilities.h
include/gmock/: gmock.h.in
include/sbia/: basis.h
include/tclap/: Arg.h.in  CmdLine.h.in  DocBookOutput.h.in  HelpVisitor.h.in  IgnoreRestVisitor.h.in  MultiArg.h.in  MultiSwitchArg.h.in  StandardTraits.h.in  StdOutput.h.in  SwitchArg.h.in  UnlabeledMultiArg.h.in  UnlabeledValueArg.h.in  ValueArg.h.in  ValuesConstraint.h.in  VersionVisitor.h.in  XorHandler.h.in  ZshCompletionOutput.h.in
src/: CMakeLists.txt  basisproject.sh  createbasisproject.sh  createproject.sh
src/cmake/: BasisCommon.cmake  BasisCommonTools.cmake  BasisDirectories.cmake  BasisDocTools.cmake  BasisGlobals.cmake  BasisMatlabTools.cmake  BasisPack.cmake  BasisProject.cmake  BasisProjectTools.cmake  BasisScriptConfig.cmake.in  BasisSettings.cmake  BasisSubversionTools.cmake  BasisTargetTools.cmake  BasisTest.cmake  BasisUpdate.cmake  CMakeLists.txt  CMakeParseArguments.cmake  CommonTools.cmake  Config.cmake.in  ConfigBuild.cmake  ConfigInstall.cmake  ConfigSettings.cmake  ConfigVersion.cmake.in  DocTools.cmake  Doxyfile.in  ExecuteProcess.cmake  ExternalData.cmake  ExternalData_config.cmake.in  FindBASIS.cmake  FindGMock.cmake  FindGTest.cmake  FindMATLAB.cmake  FindMOSEK.cmake  FindNiftiCLib.cmake  GenerateConfig.cmake  InstallationTools.cmake  MatlabTools.cmake  ScriptConfig.cmake.in  Settings.cmake  SubversionTools.cmake  (+22 more)
src/geshi/: basis.php
src/modules/: BasisPack.cmake  BasisProject.cmake  BasisSettings.cmake  BasisTest.cmake  BasisTools.cmake  CMakeLists.txt  CommonTools.cmake  Config.cmake.in  ConfigSettings.cmake  ConfigUse.cmake.in  ConfigVersion.cmake.in  DocTools.cmake  Doxyfile.in  ExecuteProcess.cmake  FindGMock.cmake  FindGTest.cmake  FindMATLAB.cmake  FindMOSEK.cmake  FindNiftiCLib.cmake  FindPerlLibs.cmake  GenerateConfig.cmake  InstallationTools.cmake  MatlabTools.cmake  ProjectTools.cmake  ScriptConfig.cmake.in  Settings.cmake  SubversionTools.cmake  TargetTools.cmake  Use.cmake.in  UtilitiesTools.cmake  updatefile.py
src/sphinx/: CMakeLists.txt
src/tools/: CMakeLists.txt  DoxyFilter.pm  basisctest.in  basisproject.py.in  basisproject.sh  basisproject.sh.in  basistest-cron.sh  basistest-cron.sh.in  basistest-master.sh  basistest-master.sh.in  basistest-sge.sh  basistest-slave.sh  basistest-slave.sh.in  basistest-svn.sh  basistest-svn.sh.in  basistest.ctest  basistest.ctest.in  basistest.sh  basistest.sh.in  basistest_cron.sh.in  basistest_master.sh.in  basistest_slave.sh.in  basistest_svn.sh.in  basistestd-cron.sh  basistestd.sh  doxyfilter-bash.py  doxyfilter-cmake.py  doxyfilter-matlab.pl  doxyfilter-perl.py  doxyfilter-python.py  doxyfilter.pl  doxyfilter.pl.in  doxyfilter.py  doxyfilter_bash.py  doxyfilter_cmake.py  doxyfilter_javascript.pl  doxyfilter_matlab.pl  doxyfilter_python.py  doxygen-bash-filter.py  doxygen-filter.pl  (+10 more)
src/utilities/: CMakeLists.txt  config.h.in  path.cc  path.h  shflags.sh  stdaux.cc.in  stdaux.h.in  stdaux.sh.in
test/: CMakeLists.txt  testaux.py.in
test/cmake/: CMakeLists.txt  test_basis_target_uid.cmake  test_future_statements.py  test_matlabtools.py.in  test_string_manipulation.cmake  test_target_properties.cmake
test/ressources/: CMakeLists.txt  dummy_command.cxx
test/tools/: CMakeLists.txt  test_basisproject.py.in  (+1 more)
tools/: CMakeLists.txt
(+755 files in other folders)
