# ============================================================================
# Copyright (c) 2011-2012 University of Pennsylvania
# Copyright (c) 2013-2016 Andreas Schuh
# All rights reserved.
#
# See COPYING file for license information or visit
# https://cmake-basis.github.io/download.html#license
# ============================================================================

##############################################################################
# @file  CMakeLists.txt
# @brief Build configuration of CMake modules and BASIS utilities..
##############################################################################

add_subdirectory (cmake)     # CMake modules
add_subdirectory (utilities) # implementation utilities
add_subdirectory (sphinx)    # Sphinx extensions and themes
